<resources>
    <string name="app_name">ResistorApp</string>
    <string name="Banda_uno">Banda 1</string>
    <string name="tolerancia">Tolerancia</string>
    <string name="multiplicador">Multiplicador</string>
    <string name="Banda_dos">Banda 2</string>
    <string name="resistencia">Valor:</string>

    <string-array name="lista1">
        <item>Café</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Blanco</item>
    </string-array>

    <string-array name="lista2">
        <item>Negro</item>
        <item>Café</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Blanco</item>
    </string-array>

    <string-array name="lista3">
        <item>Plateado</item>
        <item>Dorado</item>
        <item>Negro</item>
        <item>Café</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Blanco</item>
    </string-array>

    <string-array name="lista4">
        <item>Plateado</item>
        <item>Dorado</item>
        <item>Café</item>
        <item>Rojo</item>
        <item>Verde</item>
    </string-array>


</resources>
